welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:2: error: Missing closing brace `}' assumed here
var fini = false
^BDR2:7: error: '{' expected but 'case' found.
				case "A"	=> avance();
                                ^BDR2:8: error: '}' expected but 'case' found.
				case "B"	=> avance(); avance();
                                ^BDR2:9: error: illegal start of definition
				case "C"	=> avance(); avance(); avance();
                                ^BDR2:10: error: illegal start of definition
				case "D"	=> avance(); avance(); avance(); avance();
                                ^BDR2:11: error: illegal start of definition
				case "E"	=> avance(); avance(); avance(); avance(); avance();
                                ^BDR2:12: error: illegal start of definition
				case "F"	=> avance(); avance(); avance(); avance(); avance(); avance();
                                ^BDR2:13: error: illegal start of definition
				case "Z"	=> recule();
                                ^BDR2:14: error: illegal start of definition
				case "Y"	=> recule(); recule();
                                ^BDR2:15: error: illegal start of definition
				case "X"	=> recule(); recule(); recule();
                                ^BDR2:16: error: illegal start of definition
				case "W"	=> recule(); recule(); recule(); recule();
                                ^BDR2:17: error: illegal start of definition
				case "V"	=> recule(); recule(); recule(); recule(); recule();
                                ^BDR2:18: error: illegal start of definition
				case "U"	=> recule(); recule(); recule(); recule(); recule(); recule();
                                ^BDR2:19: error: illegal start of definition
				case "L"	=> gauche(); avance();
                                ^BDR2:20: error: illegal start of definition
				case "R"	=> droite(); avance();
                                ^BDR2:21: error: illegal start of definition
				case "I"	=> droite(); droite(); avance(); 
                                ^BDR2:24: error: eof expected but '}' found.
}
^